<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/personal_info">

        <EditTextPreference
            android:key="@string/key_user_name"
            android:title="Name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="@string/key_user_weight"
            android:title="Weight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_settings">

        <Preference
            android:key="@string/key_language"
            android:summary="\?"
            android:title="@string/language" />

        <Preference
            android:key="@string/key_clear_tracks"
            android:title="@string/clear_tracks" />

    </PreferenceCategory>

</PreferenceScreen>